# gemini-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
docker/: Dockerfile  nginx.conf
examples/: README.md
personas/: README.md  api_designer.md  blockchain_developer.md  cloud_architect.md  code_reviewer.md  codebase_investigator.md  compliance_analyst.md  data_engineer.md  data_scientist.md  database_expert.md  devops_engineer.md  frontend_architect.md  market_maker.md  ml_engineer.md  mobile_developer.md  pentester.md  performance_engineer.md  product_manager.md  quant_analyst.md  researcher.md  security_expert.md  sre_engineer.md  systems_engineer.md  technical_writer.md  threat_modeler.md  ux_designer.md
src/gemini_mcp/: __init__.py  config.py  middleware.py  server.py
src/gemini_mcp/core/: __init__.py  exceptions.py  gemini.py  response.py
src/gemini_mcp/debate/: __init__.py  orchestrator.py
src/gemini_mcp/swarm/: __init__.py  agents.py  core.py  memory.py  types.py
src/gemini_mcp/tools/: __init__.py  core.py  debate_tools.py  swarm_tools.py
tests/: __init__.py  conftest.py  test_config.py  test_debate.py  test_middleware.py  test_security.py  test_swarm.py  test_tools.py
