[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemini-mcp"
version = "1.1.0"
description = "MCP server wrapping Google's Gemini AI with multi-agent swarm capabilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "gemini-mcp contributors" }
]
keywords = ["mcp", "gemini", "ai", "llm", "swarm", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.25.0,<2.0",
    "google-genai>=1.50.0,<2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "filelock>=3.20.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=26.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
gemini-mcp = "gemini_mcp.server:main"

[project.urls]
Homepage = "https://github.com/alfredojrc/gemini-mcp"
Documentation = "https://github.com/alfredojrc/gemini-mcp#readme"
Repository = "https://github.com/alfredojrc/gemini-mcp.git"
Issues = "https://github.com/alfredojrc/gemini-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/personas",
    "/examples",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["requests.*", "starlette.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
